sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:4: error: not found: value getNombreValeur
	var ecart=getNombreValeur()/2
                  ^