sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {

	var ecart=getNombreValeur()/2
while(ecart>0)
{

 	for (i <- 1 to getNombreValeurs()-1)
 	{ 
      var j=i;
      var valeur =getValeur(i)
      while (j>=i && getValeur(j-i)>getValeur(i))
      { 
        setValeur(j,getValeur(j-1))
        j=j-i
      }
	 setValeur(j,valeur);
    }
}
}